fixed nav bug on mobile

--- a/styles.less
+++ b/styles.less
@@ -96,6 +96,8 @@ body{
       width: auto;
     }//sticky-nav
 
+    &.sticky--show{height: 100vh;}
+
     &.sticky + main {
       padding-top: 102px;
     }
